@@ -9,6 +9,7 @@
   * Consistent handling of UTF-8 strings
   * removeFromRealm() now calls moveLastOver() which is faster and more reliable when deleting multiple objects
   * Added verification of fields names in queries with links.
+  * Added exception for queries with invalid field name
 
 0.73.1 (05 Nov 2014)
   * Fixed a bug that would send infinite notifications in some instances
